--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MANGO_URI=mongodb+srv://diego98343:3253633Aa@cluster0.ubwlczw.mongodb.net/JOBSEARCH?retryWrites=true&w=majority
+JWT_SECRET=1234
+JWT_LIFETIME=30d
